(info-extract) regenerate ngram2code files

--- a/ncit.ipynb
+++ b/ncit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,190 +20,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading Thesaurus_24.02d\n",
-      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
-      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 14.4M  100 14.4M    0     0  9565k      0  0:00:01  0:00:01 --:--:-- 9565k\n",
-      "Archive:  Thesaurus_24.02d.FLAT.zip\n",
-      "  inflating: Thesaurus.txt           \n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>concept IRI</th>\n",
-       "      <th>parents</th>\n",
-       "      <th>synonyms</th>\n",
-       "      <th>definition</th>\n",
-       "      <th>display name</th>\n",
-       "      <th>concept status</th>\n",
-       "      <th>semantic type</th>\n",
-       "      <th>concept in subset</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>code</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>C100000</th>\n",
-       "      <td>&lt;http://ncicb.nci.nih.gov/xml/owl/EVS/Thesauru...</td>\n",
-       "      <td>C99521</td>\n",
-       "      <td>Percutaneous Coronary Intervention for ST Elev...</td>\n",
-       "      <td>A percutaneous coronary intervention is necess...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Therapeutic or Preventive Procedure</td>\n",
-       "      <td>CDISC SDTM Cardiac Procedure Indication Termin...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>C100001</th>\n",
-       "      <td>&lt;http://ncicb.nci.nih.gov/xml/owl/EVS/Thesauru...</td>\n",
-       "      <td>C99521</td>\n",
-       "      <td>Percutaneous Coronary Intervention for ST Elev...</td>\n",
-       "      <td>A percutaneous coronary intervention is necess...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Therapeutic or Preventive Procedure</td>\n",
-       "      <td>CDISC SDTM Cardiac Procedure Indication Termin...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>C100002</th>\n",
-       "      <td>&lt;http://ncicb.nci.nih.gov/xml/owl/EVS/Thesauru...</td>\n",
-       "      <td>C99521</td>\n",
-       "      <td>Percutaneous Coronary Intervention for ST Elev...</td>\n",
-       "      <td>A percutaneous coronary intervention is necess...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Therapeutic or Preventive Procedure</td>\n",
-       "      <td>CDISC SDTM Cardiac Procedure Indication Termin...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>C100003</th>\n",
-       "      <td>&lt;http://ncicb.nci.nih.gov/xml/owl/EVS/Thesauru...</td>\n",
-       "      <td>C80449</td>\n",
-       "      <td>Percutaneous Mitral Valve Repair|PERCUTANEOUS ...</td>\n",
-       "      <td>Invasive procedure through a puncture in the s...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Therapeutic or Preventive Procedure</td>\n",
-       "      <td>CDISC SDTM Procedure Terminology|CDISC SDTM Te...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>C100004</th>\n",
-       "      <td>&lt;http://ncicb.nci.nih.gov/xml/owl/EVS/Thesauru...</td>\n",
-       "      <td>C80430</td>\n",
-       "      <td>Pericardial Stripping|PERICARDIAL STRIPPING</td>\n",
-       "      <td>Removal or resection of the pericardium. (ACC)</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Therapeutic or Preventive Procedure</td>\n",
-       "      <td>CDISC SDTM Procedure Terminology|CDISC SDTM Te...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                               concept IRI parents  \\\n",
-       "code                                                                 \n",
-       "C100000  <http://ncicb.nci.nih.gov/xml/owl/EVS/Thesauru...  C99521   \n",
-       "C100001  <http://ncicb.nci.nih.gov/xml/owl/EVS/Thesauru...  C99521   \n",
-       "C100002  <http://ncicb.nci.nih.gov/xml/owl/EVS/Thesauru...  C99521   \n",
-       "C100003  <http://ncicb.nci.nih.gov/xml/owl/EVS/Thesauru...  C80449   \n",
-       "C100004  <http://ncicb.nci.nih.gov/xml/owl/EVS/Thesauru...  C80430   \n",
-       "\n",
-       "                                                  synonyms  \\\n",
-       "code                                                         \n",
-       "C100000  Percutaneous Coronary Intervention for ST Elev...   \n",
-       "C100001  Percutaneous Coronary Intervention for ST Elev...   \n",
-       "C100002  Percutaneous Coronary Intervention for ST Elev...   \n",
-       "C100003  Percutaneous Mitral Valve Repair|PERCUTANEOUS ...   \n",
-       "C100004        Pericardial Stripping|PERICARDIAL STRIPPING   \n",
-       "\n",
-       "                                                definition display name  \\\n",
-       "code                                                                      \n",
-       "C100000  A percutaneous coronary intervention is necess...          NaN   \n",
-       "C100001  A percutaneous coronary intervention is necess...          NaN   \n",
-       "C100002  A percutaneous coronary intervention is necess...          NaN   \n",
-       "C100003  Invasive procedure through a puncture in the s...          NaN   \n",
-       "C100004     Removal or resection of the pericardium. (ACC)          NaN   \n",
-       "\n",
-       "        concept status                        semantic type  \\\n",
-       "code                                                          \n",
-       "C100000            NaN  Therapeutic or Preventive Procedure   \n",
-       "C100001            NaN  Therapeutic or Preventive Procedure   \n",
-       "C100002            NaN  Therapeutic or Preventive Procedure   \n",
-       "C100003            NaN  Therapeutic or Preventive Procedure   \n",
-       "C100004            NaN  Therapeutic or Preventive Procedure   \n",
-       "\n",
-       "                                         concept in subset  \n",
-       "code                                                        \n",
-       "C100000  CDISC SDTM Cardiac Procedure Indication Termin...  \n",
-       "C100001  CDISC SDTM Cardiac Procedure Indication Termin...  \n",
-       "C100002  CDISC SDTM Cardiac Procedure Indication Termin...  \n",
-       "C100003  CDISC SDTM Procedure Terminology|CDISC SDTM Te...  \n",
-       "C100004  CDISC SDTM Procedure Terminology|CDISC SDTM Te...  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(189646, 8)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
-    "thesaurusf = Path('Thesaurus.txt')\n",
-    "thesaurus_version = 'Thesaurus_24.02d' \n",
+    "thesaurusf = Path(\"Thesaurus.txt\")\n",
+    "thesaurus_version = \"Thesaurus_24.02d\"\n",
     "\n",
     "if not thesaurusf.exists():\n",
-    "    print(f'Downloading {thesaurus_version}')\n",
+    "    print(f\"Downloading {thesaurus_version}\")\n",
     "    !curl -O https://evs.nci.nih.gov/ftp1/NCI_Thesaurus/{thesaurus_version}.FLAT.zip\n",
     "    !unzip {thesaurus_version}.FLAT.zip\n",
     "\n",
-    "ncit = pd.read_csv(thesaurusf, sep=\"\\t\", header=None)\n",
+    "ncit = pd.read_csv(thesaurusf, sep=\"\\t\", header=None, encoding=\"utf-8\")\n",
     "ncit.columns = [\n",
     "    \"code\",\n",
     "    \"concept IRI\",\n",
@@ -229,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,43 +95,41 @@
     "        self.pref_name = row[\"display name\"]\n",
     "\n",
     "    def __str__(self) -> str:\n",
-    "        return f\"<{self.code}, {self.pref_name}>\"\n",
+    "        return f\"<{self.code} <= {','.join(p.code for p in self.parents)}>\"\n",
     "\n",
     "    def __repr__(self) -> str:\n",
-    "        return f\"<{self.code}, {self.pref_name}>\""
+    "        return f\"<{self.code} <= {','.join(p.code for p in self.parents)}>\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "189646"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for code, row in ncit.iterrows():\n",
+    "for parent_code, row in ncit.iterrows():\n",
     "    node = Node(row)\n",
-    "    if code not in NODES_CACHE:\n",
-    "        NODES_CACHE[code] = node\n",
+    "    if parent_code not in NODES_CACHE:\n",
+    "        NODES_CACHE[parent_code] = node\n",
     "len(NODES_CACHE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "del ncit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NODES_CACHE['C5449']"
    ]
   },
   {
@@ -314,17 +141,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from collections import deque\n",
     "\n",
     "\n",
-    "def get_children_of_code(nodes: dict[str, Node], code: str):\n",
+    "def get_children_of_code(nodes: dict[str, Node], parent_code: str):\n",
     "    children = set()\n",
     "    for c, n in nodes.items():\n",
-    "        if code in [p.code for p in n.parents]:\n",
+    "        if parent_code in [p.code for p in n.parents]:\n",
     "            children.add(c)\n",
     "    return children\n",
     "\n",
@@ -344,6 +171,7 @@
     "            for child_code in node_children:\n",
     "                if child_code not in visited:\n",
     "                    queue.append(child_code)\n",
+    "                if (child_code, current_code) not in tracking_q:\n",
     "                    tracking_q.append((child_code, current_code))\n",
     "\n",
     "    return visited, tracking_q"
@@ -351,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,12 +229,14 @@
     "        continue\n",
     "    child, parent = NODES_CACHE[child], NODES_CACHE[parent]\n",
     "    for syn in child.synonyms:\n",
-    "        data.append((idx + 1, syn, child.pref_name, child.code, parent.pref_name, parent.code))"
+    "        data.append(\n",
+    "            (idx + 1, syn, child.pref_name, child.code, parent.pref_name, parent.code)\n",
+    "        )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +250,18 @@
     "        \"Parent Term\",\n",
     "        \"Parent Term Code\",\n",
     "    ],\n",
-    ")"
+    "    dtype=str\n",
+    ")\n",
+    "output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output[output[\"Parent Term Code\"] == \"C5449\"]"
    ]
   },
   {
@@ -432,83 +273,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using saved preferred_terms.csv\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>pref_name</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>code</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>C114451</th>\n",
-       "      <td>Rare Childhood Malignant Neoplasm</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>C121786</th>\n",
-       "      <td>Mixed Tumor, Not Otherwise Specified</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>C100054</th>\n",
-       "      <td>Conjunctival Melanocytic Intraepithelial Neopl...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>C168698</th>\n",
-       "      <td>Cervical Spine Neoplasm</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>C168673</th>\n",
-       "      <td>Lumbar Spine Neoplasm</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                 pref_name\n",
-       "code                                                      \n",
-       "C114451                  Rare Childhood Malignant Neoplasm\n",
-       "C121786               Mixed Tumor, Not Otherwise Specified\n",
-       "C100054  Conjunctival Melanocytic Intraepithelial Neopl...\n",
-       "C168698                            Cervical Spine Neoplasm\n",
-       "C168673                              Lumbar Spine Neoplasm"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "import requests\n",
@@ -569,10 +336,10 @@
     "            break\n",
     "\n",
     "    pref_terms_df = pd.DataFrame(data=new_column_vals, columns=[\"code\", \"pref_name\"])\n",
-    "    pref_terms_df.to_csv(pref_termsf, index=False)\n",
+    "    pref_terms_df.to_csv(pref_termsf, index=False, encoding=\"utf-8\")\n",
     "else:\n",
-    "    print(f'Using saved {pref_termsf}')\n",
-    "    pref_terms_df = pd.read_csv(pref_termsf)\n",
+    "    print(f\"Using saved {pref_termsf}\")\n",
+    "    pref_terms_df = pd.read_csv(pref_termsf, encoding=\"utf-8\")\n",
     "\n",
     "pref_terms_df = pref_terms_df.set_index(\"code\")\n",
     "display(pref_terms_df.head())"
@@ -587,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +367,7 @@
     "output[\"Parent Term\"] = output.apply(\n",
     "    lambda row: row[\"Parent Term\"]\n",
     "    if not pd.isna(row[\"Parent Term\"])\n",
-    "    else pref_terms_df.loc[row[\"Code\"]][\"pref_name\"],\n",
+    "    else pref_terms_df.loc[row[\"Parent Term Code\"]][\"pref_name\"],\n",
     "    axis=1,\n",
     ")\n",
     "assert output[\"Preferred Term\"].hasnans is False\n",
@@ -609,15 +376,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "disease2code = output.loc[:, ['Disease', 'Code']]\n",
-    "disease2code.to_csv('disease-code.tsv', sep='\\t', index=False)\n",
+    "output[output.duplicated()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "disease2code = output.loc[:, [\"Disease\", \"Code\"]].drop_duplicates()\n",
+    "disease2code = disease2code.sort_values(by=['Disease'])\n",
+    "disease2code.to_csv(\"disease-code.tsv\", sep=\"\\t\", index=False, encoding=\"utf-8\")\n",
     "\n",
-    "code2term = output.loc[:, ['Code', 'Preferred Term']].drop_duplicates()\n",
-    "code2term.to_csv('code2term.tsv', sep='\\t', index=False)"
+    "code2term = output.loc[:, [\"Code\", \"Preferred Term\"]].drop_duplicates()\n",
+    "code2term = code2term.sort_values(by=['Code'])\n",
+    "code2term.to_csv(\"code2term.tsv\", sep=\"\\t\", index=False, encoding=\"utf-8\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output.to_csv(\"neoplasm-concepts.tsv\", sep=\"\\t\", index=False, encoding=\"utf-8\")"
    ]
   }
  ],
