add code for matching between NCIt biomarker/prior therapies and codes

--- a/ncit_concept_in_subset.ipynb
+++ b/ncit_concept_in_subset.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
+    "import numpy as np\n",
     "import pandas as pd"
    ]
   },
@@ -32,7 +33,7 @@
     "    !curl -O https://evs.nci.nih.gov/ftp1/NCI_Thesaurus/{thesaurus_version}.FLAT.zip\n",
     "    !unzip {thesaurus_version}.FLAT.zip\n",
     "\n",
-    "ncit = pd.read_csv(thesaurusf, sep=\"\\t\", header=None, encoding=\"utf-8\")\n",
+    "ncit = pd.read_csv(thesaurusf, sep=\"\\t\", header=None, encoding=\"utf-8\", dtype=str)\n",
     "ncit.columns = [\n",
     "    \"code\",\n",
     "    \"concept IRI\",\n",
@@ -45,6 +46,7 @@
     "    \"concept in subset\",\n",
     "]\n",
     "ncit = ncit.set_index(\"code\")\n",
+    "ncit = ncit.fillna('')\n",
     "display(ncit.head())\n",
     "ncit.shape"
    ]
@@ -53,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Create Node mapping"
+    "#### Filter the concepts to those in subset"
    ]
   },
   {
@@ -62,153 +64,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_row(code) -> pd.Series:\n",
-    "    return ncit.loc[code]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "NODES_CACHE: dict[str, \"Node\"] = {}\n",
+    "subset_keyword = \"biomarker\"\n",
+    "subset_keyword = subset_keyword.lower()\n",
     "\n",
+    "subset_term = \"CTRP Biomarker Terminology\"\n",
     "\n",
-    "class Node:\n",
-    "    code: str\n",
-    "    parents: list[\"Node\"]\n",
-    "    synonyms: set[str]\n",
-    "    pref_name: str\n",
+    "all_concepts_in_subset = ncit[\n",
+    "    ncit[\"concept in subset\"].apply(\n",
+    "        lambda concept_in_subset: subset_term.lower() in concept_in_subset.lower()\n",
+    "    )\n",
+    "]\n",
+    "display(all_concepts_in_subset.head(), all_concepts_in_subset.shape)\n",
     "\n",
-    "    def __init__(self, row: pd.Series) -> None:\n",
-    "        self.code = row.name\n",
-    "        self.parents = []\n",
-    "        if pd.notna(row[\"parents\"]):\n",
-    "            for parent_code in row[\"parents\"].split(\"|\"):\n",
-    "                if parent_code not in NODES_CACHE:\n",
-    "                    NODES_CACHE[parent_code] = Node(get_row(parent_code))\n",
-    "                self.parents.append(NODES_CACHE[parent_code])\n",
-    "        self.synonyms = set()\n",
-    "        for synonym in row[\"synonyms\"].split(\"|\"):\n",
-    "            self.synonyms.add(synonym)\n",
-    "        self.pref_name = row[\"display name\"]\n",
-    "\n",
-    "    def __str__(self) -> str:\n",
-    "        return f\"<{self.code} <= {','.join(p.code for p in self.parents)}>\"\n",
-    "\n",
-    "    def __repr__(self) -> str:\n",
-    "        return f\"<{self.code} <= {','.join(p.code for p in self.parents)}>\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for parent_code, row in ncit.iterrows():\n",
-    "    node = Node(row)\n",
-    "    if parent_code not in NODES_CACHE:\n",
-    "        NODES_CACHE[parent_code] = node\n",
-    "len(NODES_CACHE)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "del ncit"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "NODES_CACHE['C142799']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Traverse the Node mapping for a certain concept and children"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from collections import deque\n",
-    "\n",
-    "\n",
-    "def get_children_of_code(nodes: dict[str, Node], parent_code: str):\n",
-    "    children = set()\n",
-    "    for c, n in nodes.items():\n",
-    "        if parent_code in [p.code for p in n.parents]:\n",
-    "            children.add(c)\n",
-    "    return children\n",
-    "\n",
-    "\n",
-    "def bfs(nodes: dict[str, Node], start_code: str):\n",
-    "    visited = []  # Keep track of visited nodes.\n",
-    "    queue = deque([start_code])  # Queue initialized with the start node code.\n",
-    "    tracking_q = deque([(start_code, None)])\n",
-    "\n",
-    "    while queue:\n",
-    "        current_code = queue.popleft()  # Dequeue a node code.\n",
-    "        if current_code not in visited:\n",
-    "            visited.append(current_code)\n",
-    "\n",
-    "            # Add all unvisited children to the queue.\n",
-    "            node_children = get_children_of_code(nodes, current_code)\n",
-    "            for child_code in node_children:\n",
-    "                if child_code not in visited:\n",
-    "                    queue.append(child_code)\n",
-    "                if (child_code, current_code) not in tracking_q:\n",
-    "                    tracking_q.append((child_code, current_code))\n",
-    "\n",
-    "    return visited, tracking_q"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "root_concept = \"C142799\" # biomarker\n",
-    "root_concept_parent_term, root_concept_parent_code = \"CTRP Terminology\", \"C116977\"\n",
-    "# root_concept = \"C3262\" # neoplasm\n",
-    "visited = bfs(NODES_CACHE, root_concept)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "children, children_w_parents = visited"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Check that the set of child2parents contains all unique pairs\n",
-    "combos = set()\n",
-    "for tup in children_w_parents:\n",
-    "    combos.add(tup)\n",
-    "assert len(combos) == len(children_w_parents)"
+    "related_subset_terms = set()\n",
+    "for concept_in_subset in ncit[\"concept in subset\"].unique():\n",
+    "    for term in concept_in_subset.split(\"|\"):\n",
+    "        if subset_keyword in term.lower():\n",
+    "            related_subset_terms.add(term)\n",
+    "related_subset_terms"
    ]
   },
   {
@@ -225,22 +98,23 @@
    "outputs": [],
    "source": [
     "data = []\n",
-    "for idx, (child, parent) in enumerate(children_w_parents):\n",
-    "    # if not parent:\n",
-    "    #     assert child == root_concept\n",
-    "    #     continue\n",
-    "    child, parent = NODES_CACHE[child], NODES_CACHE.get(parent, None)\n",
-    "    for syn in child.synonyms:\n",
-    "        data.append(\n",
-    "            (\n",
-    "                idx + 1,\n",
-    "                syn,\n",
-    "                child.pref_name,\n",
-    "                child.code,\n",
-    "                parent.pref_name if parent else root_concept_parent_term,\n",
-    "                parent.code if parent else root_concept_parent_code,\n",
-    "            )\n",
-    "        )"
+    "for code, row in all_concepts_in_subset.iterrows():\n",
+    "    parents = row['parents'].split('|')\n",
+    "    assert parents\n",
+    "    assert row['display name']\n",
+    "    for parent in parents:\n",
+    "        p_row = ncit.loc[parent]\n",
+    "        synonyms = row[\"synonyms\"].split(\"|\")\n",
+    "        for syn in synonyms:\n",
+    "            data.append(\n",
+    "                (\n",
+    "                    syn,\n",
+    "                    row[\"display name\"],\n",
+    "                    code,\n",
+    "                    p_row['display name'],\n",
+    "                    parent\n",
+    "                )\n",
+    "            )"
    ]
   },
   {
@@ -252,7 +126,6 @@
     "output = pd.DataFrame(\n",
     "    data,\n",
     "    columns=[\n",
-    "        \"Level\",\n",
     "        \"Term\",\n",
     "        \"Preferred Term\",\n",
     "        \"Code\",\n",
@@ -262,16 +135,6 @@
     "    dtype=str\n",
     ")\n",
     "output"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Debugging a specific code\n",
-    "# output[output[\"Parent Term Code\"] == \"C5449\"]"
    ]
   },
   {
@@ -292,7 +155,7 @@
     "\n",
     "\n",
     "num_concepts_per_evs_call = 575\n",
-    "concept_list = list(children)\n",
+    "concept_list = list(output['Parent Term Code'].unique())\n",
     "\n",
     "\n",
     "def chunks(lst, n):\n",
@@ -310,7 +173,7 @@
     "retry_limit = 3\n",
     "early_break = False\n",
     "\n",
-    "pref_termsf = Path(\"preferred_terms.csv\")\n",
+    "pref_termsf = Path(f\"preferred_terms_{subset_keyword}.csv\")\n",
     "if not pref_termsf.exists():\n",
     "    print(\"Calling EVS to get preferred terms\")\n",
     "    for ch in chunks(concept_list, num_concepts_per_evs_call):\n",
@@ -368,20 +231,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output[\"Preferred Term\"] = output.apply(\n",
-    "    lambda row: row[\"Preferred Term\"]\n",
-    "    if not pd.isna(row[\"Preferred Term\"])\n",
-    "    else pref_terms_df.loc[row[\"Code\"]][\"pref_name\"],\n",
-    "    axis=1,\n",
-    ")\n",
+    "# output[\"Preferred Term\"] = output.apply(\n",
+    "#     lambda row: row[\"Preferred Term\"]\n",
+    "#     if not pd.isna(row[\"Preferred Term\"])\n",
+    "#     else pref_terms_df.loc[row[\"Code\"]][\"pref_name\"],\n",
+    "#     axis=1,\n",
+    "# )\n",
     "output[\"Parent Term\"] = output.apply(\n",
     "    lambda row: row[\"Parent Term\"]\n",
-    "    if not pd.isna(row[\"Parent Term\"])\n",
+    "    if row[\"Parent Term\"]\n",
     "    else pref_terms_df.loc[row[\"Parent Term Code\"]][\"pref_name\"],\n",
     "    axis=1,\n",
     ")\n",
-    "assert output[\"Preferred Term\"].hasnans is False\n",
-    "assert output[\"Parent Term\"].hasnans is False"
+    "assert output[\"Preferred Term\"].all()\n",
+    "assert output[\"Parent Term\"].all()"
    ]
   },
   {
@@ -405,16 +268,9 @@
     "\n",
     "code2pref_term = output.loc[:, [\"Code\", \"Preferred Term\"]].drop_duplicates()\n",
     "code2pref_term = code2pref_term.sort_values(by=['Code'])\n",
-    "code2pref_term.to_csv(\"code2term.tsv\", sep=\"\\t\", index=False, encoding=\"utf-8\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output.to_csv(\"ncit-concepts.tsv\", sep=\"\\t\", index=False, encoding=\"utf-8\")"
+    "code2pref_term.to_csv(\"code2term.tsv\", sep=\"\\t\", index=False, encoding=\"utf-8\")\n",
+    "\n",
+    "output.to_csv(f\"ncit-{subset_keyword}-concepts.tsv\", sep=\"\\t\", index=False, encoding=\"utf-8\")"
    ]
   }
  ],
