--- a/ncit_diseases.ipynb
+++ b/ncit_diseases.ipynb
@@ -6,16 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
+    "import pandas as pd\n",
     "\n",
-    "import pandas as pd"
+    "import ncit_utils"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Load in the Thesaurus"
+    "#### Load in the Thesaurus\n"
    ]
   },
   {
@@ -24,46 +24,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "thesaurusf = Path(\"Thesaurus.txt\")\n",
-    "thesaurus_version = \"Thesaurus_24.02d\"\n",
-    "\n",
-    "if not thesaurusf.exists():\n",
-    "    print(f\"Downloading {thesaurus_version}\")\n",
-    "    !curl -O https://evs.nci.nih.gov/ftp1/NCI_Thesaurus/{thesaurus_version}.FLAT.zip\n",
-    "    !unzip {thesaurus_version}.FLAT.zip\n",
-    "\n",
-    "ncit = pd.read_csv(thesaurusf, sep=\"\\t\", header=None, encoding=\"utf-8\")\n",
-    "ncit.columns = [\n",
-    "    \"code\",\n",
-    "    \"concept IRI\",\n",
-    "    \"parents\",\n",
-    "    \"synonyms\",\n",
-    "    \"definition\",\n",
-    "    \"display name\",\n",
-    "    \"concept status\",\n",
-    "    \"semantic type\",\n",
-    "    \"concept in subset\",\n",
-    "]\n",
-    "ncit = ncit.set_index(\"code\")\n",
-    "display(ncit.head())\n",
-    "ncit.shape"
+    "# Get the latest NCIt FLAT (tsv) export\n",
+    "ncit = ncit_utils.load_ncit()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Create Node mapping"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_row(code) -> pd.Series:\n",
-    "    return ncit.loc[code]"
+    "#### Create Node mapping\n"
    ]
   },
   {
@@ -73,6 +42,11 @@
    "outputs": [],
    "source": [
     "NODES_CACHE: dict[str, \"Node\"] = {}\n",
+    "\n",
+    "\n",
+    "def get_row(code) -> pd.Series:\n",
+    "    global ncit\n",
+    "    return ncit.loc[code]\n",
     "\n",
     "\n",
     "class Node:\n",
@@ -107,36 +81,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for parent_code, row in ncit.iterrows():\n",
+    "for r_parent_code, row in ncit.iterrows():\n",
     "    node = Node(row)\n",
-    "    if parent_code not in NODES_CACHE:\n",
-    "        NODES_CACHE[parent_code] = node\n",
-    "len(NODES_CACHE)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "del ncit"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "NODES_CACHE['C142799']"
+    "    if r_parent_code not in NODES_CACHE:\n",
+    "        NODES_CACHE[r_parent_code] = node\n",
+    "print(len(NODES_CACHE))\n",
+    "# Test a random code\n",
+    "print(NODES_CACHE[\"C142799\"])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Traverse the Node mapping for a certain concept and children"
+    "#### Traverse the Node mapping for a certain concept and children\n"
    ]
   },
   {
@@ -167,7 +125,10 @@
     "            visited.append(current_code)\n",
     "\n",
     "            # Add all unvisited children to the queue.\n",
-    "            node_children = get_children_of_code(nodes, current_code)\n",
+    "            if current_code == \"C2991\":\n",
+    "                node_children = [\"C3262\"]\n",
+    "            else:\n",
+    "                node_children = get_children_of_code(nodes, current_code)\n",
     "            for child_code in node_children:\n",
     "                if child_code not in visited:\n",
     "                    queue.append(child_code)\n",
@@ -183,19 +144,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "root_concept = \"C142799\" # biomarker\n",
-    "root_concept_parent_term, root_concept_parent_code = \"CTRP Terminology\", \"C116977\"\n",
-    "# root_concept = \"C3262\" # neoplasm\n",
-    "visited = bfs(NODES_CACHE, root_concept)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "children, children_w_parents = visited"
+    "root_concept = \"C2991\"  # disease, disorder, finding\n",
+    "# root_concept = \"C3262\"  # neoplasm\n",
+    "children, children_w_parents = bfs(NODES_CACHE, root_concept)"
    ]
   },
   {
@@ -215,7 +166,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Construct the output"
+    "#### Construct the output\n"
    ]
   },
   {
@@ -226,9 +177,9 @@
    "source": [
     "data = []\n",
     "for idx, (child, parent) in enumerate(children_w_parents):\n",
-    "    # if not parent:\n",
-    "    #     assert child == root_concept\n",
-    "    #     continue\n",
+    "    if not parent:\n",
+    "        assert child == root_concept\n",
+    "        continue\n",
     "    child, parent = NODES_CACHE[child], NODES_CACHE.get(parent, None)\n",
     "    for syn in child.synonyms:\n",
     "        data.append(\n",
@@ -237,18 +188,10 @@
     "                syn,\n",
     "                child.pref_name,\n",
     "                child.code,\n",
-    "                parent.pref_name if parent else root_concept_parent_term,\n",
-    "                parent.code if parent else root_concept_parent_code,\n",
+    "                parent.pref_name if parent else None,\n",
+    "                parent.code if parent else None,\n",
     "            )\n",
-    "        )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        )\n",
     "output = pd.DataFrame(\n",
     "    data,\n",
     "    columns=[\n",
@@ -259,26 +202,17 @@
     "        \"Parent Term\",\n",
     "        \"Parent Term Code\",\n",
     "    ],\n",
-    "    dtype=str\n",
+    "    dtype=str,\n",
     ")\n",
+    "output.to_csv(\"disease_codes.csv\", index=False)\n",
     "output"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Debugging a specific code\n",
-    "# output[output[\"Parent Term Code\"] == \"C5449\"]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Call EVS API to get preferred terms"
+    "#### Call EVS API to get preferred terms\n"
    ]
   },
   {
@@ -287,79 +221,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import time\n",
-    "import requests\n",
-    "\n",
-    "\n",
-    "num_concepts_per_evs_call = 575\n",
-    "concept_list = list(children)\n",
-    "\n",
-    "\n",
-    "def chunks(lst, n):\n",
-    "    \"\"\"Yield successive n-sized chunks from lst.\"\"\"\n",
-    "    for i in range(0, len(lst), n):\n",
-    "        yield lst[i : i + n]\n",
-    "\n",
-    "\n",
-    "concept_url_fstring = (\n",
-    "    \"https://api-evsrest.nci.nih.gov/api/v1/concept/ncit?list=%s&include=summary\"\n",
+    "disease_terms_df = ncit_utils.EVSConceptsApi.load_terms_w_synonyms(\n",
+    "    children, \"ncit_output/preferred_terms_diseases.csv\"\n",
     ")\n",
-    "new_column_vals = []\n",
-    "chunk_count = 0\n",
-    "record_count = 0\n",
-    "retry_limit = 3\n",
-    "early_break = False\n",
-    "\n",
-    "pref_termsf = Path(\"preferred_terms.csv\")\n",
-    "if not pref_termsf.exists():\n",
-    "    print(\"Calling EVS to get preferred terms\")\n",
-    "    for ch in chunks(concept_list, num_concepts_per_evs_call):\n",
-    "        c_codes = list(ch)\n",
-    "        record_count += len(c_codes)\n",
-    "        c_codes_string = \",\".join(c_codes)\n",
-    "        concept_url_string = concept_url_fstring % (c_codes_string)\n",
-    "        retry_count = 0\n",
-    "\n",
-    "        while retry_count < retry_limit:\n",
-    "            try:\n",
-    "                r = requests.get(concept_url_string, timeout=(1.0, 15.0))\n",
-    "            except requests.exceptions.RequestException as e:\n",
-    "                print(\"exception -- \", e)\n",
-    "                print(\"sleeping\")\n",
-    "                retry_count += 1\n",
-    "                if retry_count == retry_limit:\n",
-    "                    print(\"retry max limit hit -- bailing out \")\n",
-    "                    early_break = True\n",
-    "                    break\n",
-    "                time.sleep(15)\n",
-    "            else:\n",
-    "                concept_set = r.json()\n",
-    "                for newc in concept_set:\n",
-    "                    new_column_vals.append((newc[\"code\"], newc[\"name\"]))\n",
-    "\n",
-    "                chunk_count = chunk_count + 1\n",
-    "                print(\n",
-    "                    \"processing chunk \", chunk_count, \" record count = \", record_count\n",
-    "                )\n",
-    "                break\n",
-    "        if early_break:\n",
-    "            break\n",
-    "\n",
-    "    pref_terms_df = pd.DataFrame(data=new_column_vals, columns=[\"code\", \"pref_name\"])\n",
-    "    pref_terms_df.to_csv(pref_termsf, index=False, encoding=\"utf-8\")\n",
-    "else:\n",
-    "    print(f\"Using saved {pref_termsf}\")\n",
-    "    pref_terms_df = pd.read_csv(pref_termsf, encoding=\"utf-8\")\n",
-    "\n",
-    "pref_terms_df = pref_terms_df.set_index(\"code\")\n",
-    "display(pref_terms_df.head())"
+    "disease_terms_df = disease_terms_df.dropna(subset=['source'])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Output results"
+    "#### Apply EVS terms to output"
    ]
   },
   {
@@ -368,16 +240,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "\n",
+    "syn_to_sources = defaultdict(set)\n",
+    "\n",
+    "for _, row in disease_terms_df.iterrows():\n",
+    "    r_code = row[\"code\"]\n",
+    "    syn = row[\"synonym\"]\n",
+    "    source = row[\"source\"]\n",
+    "    syn_to_sources[(r_code, syn)].add(source)\n",
+    "\n",
+    "\n",
+    "def get_sources(row: pd.Series):\n",
+    "    as_list = list(syn_to_sources[(row[\"Code\"], row[\"Term\"])])\n",
+    "    as_list.sort()\n",
+    "    return \",\".join(as_list)\n",
+    "\n",
+    "\n",
+    "output[\"Sources\"] = output[[\"Term\", \"Code\"]].apply(get_sources, axis=1)\n",
+    "assert not output[\"Sources\"].isna().any()\n",
+    "display(output.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use existing pref term if provided by NCIt\n",
+    "# Else use the EVS preferred name\n",
+    "code_to_term_map = {}\n",
+    "\n",
+    "\n",
+    "def code_to_term(code: str):\n",
+    "    if code not in code_to_term_map:\n",
+    "        term = disease_terms_df.loc[disease_terms_df[\"code\"] == code, \"name\"].iloc[0]\n",
+    "        code_to_term_map[code] = term\n",
+    "    return code_to_term_map[code]\n",
+    "\n",
+    "\n",
     "output[\"Preferred Term\"] = output.apply(\n",
     "    lambda row: row[\"Preferred Term\"]\n",
     "    if not pd.isna(row[\"Preferred Term\"])\n",
-    "    else pref_terms_df.loc[row[\"Code\"]][\"pref_name\"],\n",
+    "    else code_to_term(row[\"Code\"]),\n",
     "    axis=1,\n",
     ")\n",
+    "print(\"Done with Preferred Term.\")\n",
     "output[\"Parent Term\"] = output.apply(\n",
     "    lambda row: row[\"Parent Term\"]\n",
     "    if not pd.isna(row[\"Parent Term\"])\n",
-    "    else pref_terms_df.loc[row[\"Parent Term Code\"]][\"pref_name\"],\n",
+    "    else code_to_term(row[\"Parent Term Code\"]),\n",
     "    axis=1,\n",
     ")\n",
     "assert output[\"Preferred Term\"].hasnans is False\n",
@@ -390,7 +304,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output[output.duplicated()]"
+    "assert not output.duplicated().any()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Save the output"
    ]
   },
   {
@@ -400,12 +321,23 @@
    "outputs": [],
    "source": [
     "term2code = output.loc[:, [\"Term\", \"Code\"]].drop_duplicates()\n",
-    "term2code = term2code.sort_values(by=['Term'])\n",
-    "term2code.to_csv(\"term-code.tsv\", sep=\"\\t\", index=False, encoding=\"utf-8\")\n",
+    "term2code = term2code.sort_values(by=[\"Term\"])\n",
+    "term2code.to_csv(\"disease_syn_2_code.tsv\", sep=\"\\t\", index=False, encoding=\"utf-8\")\n",
     "\n",
     "code2pref_term = output.loc[:, [\"Code\", \"Preferred Term\"]].drop_duplicates()\n",
-    "code2pref_term = code2pref_term.sort_values(by=['Code'])\n",
-    "code2pref_term.to_csv(\"code2term.tsv\", sep=\"\\t\", index=False, encoding=\"utf-8\")"
+    "code2pref_term = code2pref_term.sort_values(by=[\"Code\"])\n",
+    "code2pref_term.to_csv(\n",
+    "    \"disease_code_2_pref_term.tsv\", sep=\"\\t\", index=False, encoding=\"utf-8\"\n",
+    ")\n",
+    "\n",
+    "output.to_csv(\"disease_ncit_concepts.tsv\", sep=\"\\t\", index=False, encoding=\"utf-8\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Check the output"
    ]
   },
   {
@@ -414,7 +346,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output.to_csv(\"ncit-concepts.tsv\", sep=\"\\t\", index=False, encoding=\"utf-8\")"
+    "parents_checked = set()\n",
+    "\n",
+    "\n",
+    "def check_output(row: pd.Series):\n",
+    "    r_code = row[\"Code\"]\n",
+    "    r_parent_code = row[\"Parent Term Code\"]\n",
+    "    if r_parent_code in parents_checked:\n",
+    "        return\n",
+    "\n",
+    "    parents_checked.add(r_parent_code)\n",
+    "\n",
+    "    if r_parent_code != \"C2991\":\n",
+    "        assert (\n",
+    "            pd.Series(r_parent_code).isin(output[\"Code\"]).any()\n",
+    "        ), f\"Failed to find {r_parent_code} in output Codes\"\n",
+    "\n",
+    "    assert r_code in children, \"Every code should have been visited\"\n",
+    "\n",
+    "    parent_terms: pd.Series = output[\"Parent Term\"].loc[\n",
+    "        output[\"Parent Term Code\"] == r_parent_code\n",
+    "    ]\n",
+    "    assert (\n",
+    "        len(parent_terms.unique()) == 1\n",
+    "    ), f\"Parent Code {r_parent_code} should have the same Parent Term {parent_terms}\"\n",
+    "\n",
+    "    terms: pd.Series = output[\"Preferred Term\"].loc[output[\"Code\"] == r_code]\n",
+    "    assert (\n",
+    "        len(terms.unique()) == 1\n",
+    "    ), f\"Code {r_code} should have the same Preferred Term {terms}\"\n",
+    "\n",
+    "\n",
+    "_ = output.apply(check_output, axis=1)"
    ]
   }
  ],
