add code for NCIt biomarkers

--- a/ncit_biomarkers.ipynb
+++ b/ncit_biomarkers.ipynb
@@ -75,8 +75,11 @@
     "biomarker_codes = ncit[\"code\"][\n",
     "    ncit[\"concept in subset\"].str.contains(\"CTRP Biomarker Terminology\", case=False)\n",
     "]\n",
-    "print(biomarker_codes.shape)\n",
-    "print(biomarker_codes.unique().shape)"
+    "biomarker_codes_w_parent = parents_df[\n",
+    "    parents_df[\"code\"].isin(biomarker_codes)\n",
+    "].reset_index(drop=True)\n",
+    "display(biomarker_codes_w_parent)\n",
+    "print(biomarker_codes_w_parent.drop_duplicates().shape)"
    ]
   },
   {
@@ -95,27 +98,254 @@
     "logfile = open(\"logfile.log\", \"w\")\n",
     "global_visited = set()\n",
     "\n",
-    "def t(code: str, children: set):\n",
+    "\n",
+    "def t(code: str, parent: str):\n",
     "    if not code:\n",
     "        return\n",
-    "    if code in global_visited:\n",
+    "    if (code, parent) in global_visited:\n",
     "        return\n",
-    "    global_visited.add(code)\n",
-    "    logfile.write(f\"visiting {code}\\n\")\n",
+    "    global_visited.add((code, parent))\n",
+    "    logfile.write(f\"visiting {(code, parent)}\\n\")\n",
+    "    # Find all the codes where the code's parent is equal to the input code\n",
     "    child_codes = parents_df[\"code\"][parents_df[\"parent\"] == code]\n",
     "    if child_codes.any():\n",
-    "        child_codes.apply(children.add)\n",
-    "        child_codes.apply(t, args=(children,))\n",
+    "        # Apply to code's children. Code becomes the parent.\n",
+    "        child_codes.apply(t, args=(code,))\n",
     "    else:\n",
     "        return\n",
     "\n",
     "\n",
-    "mapping = {}\n",
-    "for biomarker_code in biomarker_codes:\n",
-    "    mapping[biomarker_code] = set()\n",
-    "    t(biomarker_code, mapping[biomarker_code])\n",
+    "for biomarker_code, parent_code in biomarker_codes_w_parent.itertuples(index=False):\n",
+    "    t(biomarker_code, parent_code)\n",
     "\n",
     "logfile.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Construct the output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tqdm import tqdm\n",
+    "\n",
+    "lookups: dict[str, pd.Series] = {}\n",
+    "data = []\n",
+    "for child, parent in tqdm(global_visited):\n",
+    "    if child not in lookups:\n",
+    "        child_row = ncit[ncit[\"code\"] == child].iloc[0]\n",
+    "        lookups[child] = child_row\n",
+    "    if parent not in lookups:\n",
+    "        parent_row = ncit[ncit[\"code\"] == parent].iloc[0]\n",
+    "        lookups[parent] = parent_row\n",
+    "    child_row = lookups[child]\n",
+    "    parent_row = lookups[parent]\n",
+    "    synonyms = child_row[\"synonyms\"].split(\"|\")\n",
+    "    for syn in synonyms:\n",
+    "        data.append(\n",
+    "            (\n",
+    "                syn,\n",
+    "                child_row[\"display name\"],\n",
+    "                child,\n",
+    "                parent_row[\"display name\"],\n",
+    "                parent,\n",
+    "            )\n",
+    "        )\n",
+    "output = pd.DataFrame(\n",
+    "    data,\n",
+    "    columns=[\n",
+    "        \"Term\",\n",
+    "        \"Preferred Term\",\n",
+    "        \"Code\",\n",
+    "        \"Parent Term\",\n",
+    "        \"Parent Term Code\",\n",
+    "    ],\n",
+    "    dtype=str,\n",
+    ")\n",
+    "output.to_csv(\"biomarker_codes.csv\", index=False)\n",
+    "output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Call EVS API to get preferred terms\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pref_term_codes_set = pd.concat([output['Code'], output['Parent Term Code']]).drop_duplicates()\n",
+    "biomarker_terms_df = ncit_utils.EVSConceptsApi.load_terms_w_synonyms(\n",
+    "    pref_term_codes_set, \"ncit_output/preferred_terms_biomarkers.csv\"\n",
+    ")\n",
+    "biomarker_terms_df = biomarker_terms_df.dropna(subset=['source'])\n",
+    "biomarker_terms_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Apply EVS terms to output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "\n",
+    "syn_to_sources = defaultdict(set)\n",
+    "\n",
+    "for _, row in biomarker_terms_df.iterrows():\n",
+    "    r_code = row[\"code\"]\n",
+    "    syn = row[\"synonym\"]\n",
+    "    source = row[\"source\"]\n",
+    "    syn_to_sources[(r_code, syn)].add(source)\n",
+    "\n",
+    "\n",
+    "def get_sources(row: pd.Series):\n",
+    "    as_list = list(syn_to_sources[(row[\"Code\"], row[\"Term\"])])\n",
+    "    as_list.sort()\n",
+    "    return \",\".join(as_list)\n",
+    "\n",
+    "\n",
+    "output[\"Sources\"] = output[[\"Term\", \"Code\"]].apply(get_sources, axis=1)\n",
+    "assert not output[\"Sources\"].isna().any()\n",
+    "display(output.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use existing pref term if provided by NCIt\n",
+    "# Else use the EVS preferred name\n",
+    "code_to_term_map = {}\n",
+    "\n",
+    "\n",
+    "def code_to_term(code: str):\n",
+    "    if code not in code_to_term_map:\n",
+    "        term = biomarker_terms_df.loc[biomarker_terms_df[\"code\"] == code, \"name\"].iloc[\n",
+    "            0\n",
+    "        ]\n",
+    "        code_to_term_map[code] = term\n",
+    "    return code_to_term_map[code]\n",
+    "\n",
+    "\n",
+    "output[\"Preferred Term\"] = output.apply(\n",
+    "    lambda row: row[\"Preferred Term\"]\n",
+    "    if row[\"Preferred Term\"]\n",
+    "    else code_to_term(row[\"Code\"]),\n",
+    "    axis=1,\n",
+    ")\n",
+    "print(\"Done with Preferred Term.\")\n",
+    "output[\"Parent Term\"] = output.apply(\n",
+    "    lambda row: row[\"Parent Term\"]\n",
+    "    if row[\"Parent Term\"]\n",
+    "    else code_to_term(row[\"Parent Term Code\"]),\n",
+    "    axis=1,\n",
+    ")\n",
+    "assert not (output[\"Preferred Term\"] == \"\").any()\n",
+    "assert not (output[\"Parent Term\"] == \"\").any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(output.duplicated().sum())\n",
+    "print(output.shape)\n",
+    "output = output.drop_duplicates()\n",
+    "print(output.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Save the output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "term2code = output.loc[:, [\"Term\", \"Code\"]].drop_duplicates()\n",
+    "term2code = term2code.sort_values(by=[\"Term\"])\n",
+    "term2code.to_csv(\"biomarker_syn_2_code.tsv\", sep=\"\\t\", index=False, encoding=\"utf-8\")\n",
+    "\n",
+    "code2pref_term = output.loc[:, [\"Code\", \"Preferred Term\"]].drop_duplicates()\n",
+    "code2pref_term = code2pref_term.sort_values(by=[\"Code\"])\n",
+    "code2pref_term.to_csv(\n",
+    "    \"biomarker_code_2_pref_term.tsv\", sep=\"\\t\", index=False, encoding=\"utf-8\"\n",
+    ")\n",
+    "\n",
+    "output.to_csv(\"biomarker_ncit_concepts.tsv\", sep=\"\\t\", index=False, encoding=\"utf-8\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Check the output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tqdm import tqdm\n",
+    "\n",
+    "tqdm.pandas()\n",
+    "\n",
+    "codes_checked = set()\n",
+    "parents_checked = set()\n",
+    "\n",
+    "\n",
+    "def check_output(arr):\n",
+    "    pref_term = arr[1]\n",
+    "    code = arr[2]\n",
+    "    parent_term = arr[3]\n",
+    "    parent_code = arr[4]\n",
+    "\n",
+    "    len(pref_term) >= 1\n",
+    "    len(parent_term) >= 1\n",
+    "\n",
+    "    if code not in codes_checked:\n",
+    "        terms = output[\"Preferred Term\"][output[\"Code\"] == code]\n",
+    "        assert len(terms.unique()) == 1\n",
+    "        codes_checked.add(code)\n",
+    "    if parent_code not in parents_checked:\n",
+    "        terms = output[\"Parent Term\"][output[\"Parent Term Code\"] == parent_code]\n",
+    "        assert len(terms.unique()) == 1\n",
+    "        parents_checked.add(parent_code)\n",
+    "\n",
+    "\n",
+    "_ = output.progress_apply(check_output, axis=1, raw=True)"
    ]
   }
  ],
