--- a/ncit_diseases.ipynb
+++ b/ncit_diseases.ipynb
@@ -25,7 +25,8 @@
    "outputs": [],
    "source": [
     "# Get the latest NCIt FLAT (tsv) export\n",
-    "ncit = ncit_utils.load_ncit()"
+    "ncit = ncit_utils.load_ncit()\n",
+    "ncit = ncit.set_index(\"code\")"
    ]
   },
   {
